added style to buttons

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,16 +7,34 @@ a {
     color: #00B7FF;
 }
 
+.button {
+    background-color: #00B7FF;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 25px;
+}
+
+.button:hover {
+    background-color: #01a1de;
+    color: white;
+    cursor: pointer;
+}
+
 .cities {
     padding: 10px;
-    background: #E5E5E5;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
+    gap: 10px;
 }
 
 #map {
@@ -43,10 +61,12 @@ img.orange-icon {
 
 @media (max-width: 600px) {
     h1 {
-        font-size: 18px;
+        display: none;
     }
 
     .cities {
         flex-direction: column;
+        align-items: center;
+        gap: 5px;
     }
 }
